Fix issue where image loading causes layout jumps. Fix board showcase paging.
* Fixed by setting default image height.
* Increased threshold before loading more showcases.
* Add controller and action to body_tag.

--- a/app/assets/stylesheets/partials/_showcases.css.sass
+++ b/app/assets/stylesheets/partials/_showcases.css.sass
@@ -9,7 +9,7 @@
   .showcase
     display: inline-block
     margin: 10px 25px 10px 0px
-    max-width: 500px
+    max-width: 300px
 
     color: $light
     font-size: 1.2em
